--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Graham, Isabella, 1742-1814'
 - !lcsh 'Christian biography'
 - !lcc 'BR'
+- GITenberg
 title: 'The Power of Faith
 
   Exemplified In The Life And Writings Of The Late Mrs. Isabella Graham.'
